:construction: add about, recipe and contact pages

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<header>
+<header class="header_index">
     <div class="header__box">
         <h1 class="header__box_title"><a href="./">Foodies</a></h1>
         <nav>
             <ul class="header__box_menu">
-                <li class="header__box_menu_list"><a href="">About Us</a></li>
-                <li class="header__box_menu_list"><a href="">Recipes</a></li>
+                <li class="header__box_menu_list"><a href="about_us.html">About Us</a></li>
+                <li class="header__box_menu_list"><a href="recipes.html">Recipes</a></li>
                 <li class="header__box_menu_list"><a href="">Contact</a></li>
             </ul>
         </nav>
@@ -150,8 +150,10 @@
             </nav>
             <ul class="footer_sns">
                 <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                             alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                              alt="Instagram"></a></li>
             </ul>
         </div>
     </div>
