:construction: implementing responsive design

--- a/about_us.html
+++ b/about_us.html
@@ -18,7 +18,7 @@
             <ul class="header__box_menu">
                 <li class="header__box_menu_list"><a href="about_us.html">About Us</a></li>
                 <li class="header__box_menu_list"><a href="recipes.html">Recipes</a></li>
-                <li class="header__box_menu_list"><a href="">Contact</a></li>
+                <li class="header__box_menu_list"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
