--- a/recipes.html
+++ b/recipes.html
@@ -16,9 +16,9 @@
     <h1 class="header__box_title"><a href="./">Foodies</a></h1>
     <nav>
       <ul class="header__box_menu">
-        <li class="header__box_menu_list"><a href="">About Us</a></li>
-        <li class="header__box_menu_list"><a href="">Recipes</a></li>
-        <li class="header__box_menu_list"><a href="">Contact</a></li>
+        <li class="header__box_menu_list"><a href="about_us.html">About Us</a></li>
+        <li class="header__box_menu_list"><a href="recipes.html">Recipes</a></li>
+        <li class="header__box_menu_list"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
