:construction: implementing responsive design

--- a/about_us.html
+++ b/about_us.html
@@ -50,7 +50,7 @@
 <main>
     <section class="contents_box">
         <div class="contents_des_box about_us_des_box">
-            <h3 class="contents_title about_us_title">About Us</h3>
+            <h3 class="contents_title">About Us</h3>
             <p class="contents_text">Foodies is here to help you cook delicious meals with less stress and more joy. We offer recipes and cooking
             advice for home cooks, by home cooks. Helping create “kitchen wins” is what we’re all about.</p>
             <p class="contents_text">Foodies was founded in 2003 by Elise Bauer as a home cooking blog to record her favorite family recipes.
@@ -64,7 +64,7 @@
     <section class="contents_box">
         <div class="contents_img_box"><img src="images/our_history_img.png" alt=""></div>
         <div class="contents_des_box our_history_des_box">
-            <h3 class="contents_title our_history_title">Our History</h3>
+            <h3 class="contents_title">Our History</h3>
             <p class="contents_text">Elise Bauer was a busy Silicon Valley executive when she became sick with a flu that wouldn’t go away in 2001. In 2003, Elise moved home with her parents and lived with them for several years, recovering from chronic fatigue and documenting her parents’ cooking on Simply Recipes. Over the years, what started as a small blog grew to reach millions of readers every month! In 2020, Foodies was acquired by Dotdash, a New York-based media company.</p>
         </div>
     </section>
