:sparkles: add css animation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </header>
 <main>
     <section class="contents_box">
-        <h3 class="contents_title index_contents_title">Welcome</h3>
+        <h3 class="contents_title index_contents_title fade-in fade-in-up">Welcome</h3>
         <p class="contents_text">Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
             guides, and meal plans, drawing over 15 million readers each month from around the world. </p>
         <p class="contents_text">We’re supported by a group of recipe developers, food writers, recipe and product
@@ -58,7 +58,7 @@
         <p class="contents_text_link"><a href="about_us.html">Learn More...</a></p>
     </section>
     <section class="contents_box">
-        <h3 class="contents_title index_contents_title">Newest Recipes</h3>
+        <h3 class="contents_title index_contents_title fade-in fade-in-up">Newest Recipes</h3>
         <ul class="recipe_list">
             <li>
                 <a href="recipe_detail.html">
