--- a/recipes.html
+++ b/recipes.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/recipes.css">
 </head>
 <body>
-<header class="header_about_us">
+<header class="header_recipes">
   <div class="header_box">
     <h1 class="header_title"><a href="./">Foodies</a></h1>
     <nav class="pc_header">
