:technologist: put the js code in one file

--- a/contact.html
+++ b/contact.html
@@ -92,107 +92,6 @@
   </div>
   <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
-<script>
-  window.onload = function () {
-    //  読み込みが完了したら実行したい処理を記述
-    const nav = document.getElementById('nav-wrapper');
-    const hamburger = document.getElementById('js-hamburger');
-    const blackBg = document.getElementById('js-black-bg');
-    hamburger.addEventListener('click', function () {
-      nav.classList.toggle('open');
-    });
-// 黒背景をクリックしたら
-    blackBg.addEventListener('click', function () {
-      nav.classList.remove('open');
-    });
-
-    const form = document.getElementById('form');
-    const username = document.getElementById('username');
-    const email = document.getElementById('email');
-    const comment = document.getElementById('comment');
-    let nameV,emailV,commentV;
-
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-
-      validateInputs();
-    });
-
-    const setError = (element, message) => {
-      const inputControl = element.parentElement;
-      const errorDisplay = inputControl.querySelector('.error');
-
-      errorDisplay.innerText = message;
-      inputControl.classList.add('error');
-      inputControl.classList.remove('success')
-    }
-
-    const setSuccess = element => {
-      const inputControl = element.parentElement;
-      const errorDisplay = inputControl.querySelector('.error');
-
-      errorDisplay.innerText = '';
-      inputControl.classList.add('success');
-      inputControl.classList.remove('error');
-    };
-
-    const setDefault = element => {
-      const inputControl = element.parentElement;
-      const errorDisplay = inputControl.querySelector('.error');
-
-      errorDisplay.innerText = '';
-      inputControl.classList.remove('success');
-      inputControl.classList.remove('error');
-    };
-
-    const isValidEmail = email => {
-      const re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-      return re.test(String(email).toLowerCase());
-    }
-
-    const validateInputs = () => {
-      const usernameValue = username.value.trim();
-      const emailValue = email.value.trim();
-      const commentValue = comment.value.trim();
-
-      if(usernameValue === '') {
-        setError(username, 'Username is required');
-        nameV = false;
-      } else {
-        setSuccess(username);
-        nameV = true;
-      }
-
-      if(emailValue === '') {
-        setError(email, 'Email is required');
-        emailV = false;
-      } else if (!isValidEmail(emailValue)) {
-        setError(email, 'Provide a valid email address');
-        emailV = false;
-      } else {
-        setSuccess(email);
-        emailV = true;
-      }
-
-      if(commentValue === '') {
-        setError( comment, 'Comment is required');
-        commentV = false;
-      } else {
-        setSuccess(comment);
-        commentV = true;
-      }
-
-      if(commentV && nameV && emailV){
-        alert("Thank you for your comment!");
-        document.getElementById("form").reset();
-        setDefault(username);
-        setDefault(comment);
-        setDefault(email);
-      }
-
-    };
-
-  };
-</script>
+<script src="js/index.js"></script>
 </body>
 </html>
