--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,7 @@
   </div>
   <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
-<script src="js/index.js"></script>
+<script src="js/nav_menu.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
