--- a/index.html
+++ b/index.html
@@ -182,6 +182,6 @@
     </div>
     <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
-<script src="js/index.js"></script>
+<script src="js/nav_menu.js"></script>
 </body>
 </html>
