--- a/recipes.html
+++ b/recipes.html
@@ -240,6 +240,7 @@
   <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
 <script src="js/splide.min.js"></script>
-<script src="js/index.js"></script>
+<script src="js/carousel.js"></script>
+<script src="js/nav_menu.js"></script>
 </body>
 </html>
