:sparkles: add modal

--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,19 @@
             <textarea name="comment" id="comment" cols="30" rows="10" aria-required="true"></textarea>
             <div class="error"></div>
         </div>
-        <button type="submit">Sign Up</button>
+        <button type="submit">Sent</button>
     </form>
+    <div id="easyModal" class="modal">
+        <div class="modal-content">　
+            <span class="modalClose">×</span>
+            <h2 class="modal-header">Thank You</h2>　
+            <div class="modal-body">
+                <p>Your comment has been successfully sent.</p>
+                <p>It may take a few days for a reply.</p>
+                <p>Have a nice day!</p>
+            </div>　
+        </div>　　
+    </div>
 </main>
 <footer>
     <div class="footer_box">
