--- a/recipes.html
+++ b/recipes.html
@@ -53,11 +53,29 @@
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
-                    <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png"
-                                                                                alt="Best Genovese Source"></a></li>
-                    <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png" alt=""></a>
+                    <li class="splide__slide">
+                        <a href="recipe_detail.html">
+                            <picture>
+                                <source srcset="images/slide_1_sp.png" media="(max-width: 540px)"/>
+                                <img src="images/slide_1_pc.png" alt="Best Genovese Source">
+                            </picture>
+                        </a>
                     </li>
-                    <li class="splide__slide"><a href="recipe_detail.html"><img src="images/slide_1.png" alt=""></a>
+                    <li class="splide__slide">
+                        <a href="recipe_detail.html">
+                            <picture>
+                                <source srcset="images/slide_1_sp.png" media="(max-width: 540px)"/>
+                                <img src="images/slide_1_pc.png" alt="Best Genovese Source">
+                            </picture>
+                        </a>
+                    </li>
+                    <li class="splide__slide">
+                        <a href="recipe_detail.html">
+                            <picture>
+                                <source srcset="images/slide_1_sp.png" media="(max-width: 540px)"/>
+                                <img src="images/slide_1_pc.png" alt="Best Genovese Source">
+                            </picture>
+                        </a>
                     </li>
                 </ul>
             </div>
