--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Foodies</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Foodies - Recipes -" />
+    <meta property="og:description" content="Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
+            guides, and meal plans, drawing over 15 million readers each month from around the world." />
+    <meta property="og:site_name" content="Foodies" />
+    <meta property="og:image" content=" サムネイル画像の URL" />
+    <title>Foodies - Thai Red Curry -</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="images/android-chrome-192x192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Roboto&display=swap"
