:sparkles: add comment css files and index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 </head>
 <body>
 <header class="header_index">
+    <!------------------------
+        Header
+    -------------------------->
     <div class="header_box">
         <h1 class="header_title"><a href="./">Foodies</a></h1>
+        <!-- pc header menu -->
         <nav class="pc_header">
             <ul class="header_menu">
                 <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
@@ -34,18 +38,22 @@
                 <li class="header_menu_list"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <!-- sp header -->
         <div id="nav-wrapper" class="nav-wrapper sp_header">
+            <!-- sp hamburger menu -->
             <div class="hamburger" id="js-hamburger">
                 <span class="hamburger__line hamburger__line--1"></span>
                 <span class="hamburger__line hamburger__line--2"></span>
                 <span class="hamburger__line hamburger__line--3"></span>
             </div>
             <nav class="sp-nav">
+                <!-- sp menu -->
                 <ul class="sp_menu">
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <!-- sp sns -->
                 <ul class="footer_sns">
                     <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
                     </li>
@@ -55,13 +63,18 @@
                                                                                   alt="Instagram"></a></li>
                 </ul>
             </nav>
+            <!-- sp menu background -->
             <div class="black-bg" id="js-black-bg"></div>
         </div>
     </div>
+    <!-- main image -->
     <h2 class="header_main_title">What's on the menu today?</h2>
     <div class="header_main_button"><a href="recipes.html">Find a recipe</a></div>
 </header>
 <main>
+    <!------------------------
+        Welcome
+    -------------------------->
     <section class="contents_box">
         <h3 class="contents_title index_contents_title fade-in fade-in-up">Welcome</h3>
         <p class="contents_text">Foodies is a trusted resource for home cooks withmore than 3,000 tested recipes,
@@ -70,6 +83,9 @@
             testers, photographers, and other creative professionals.</p>
         <p class="contents_text_link"><a href="about_us.html">Learn More...</a></p>
     </section>
+    <!------------------------
+        Recipe List
+    -------------------------->
     <section class="contents_box">
         <h3 class="contents_title index_contents_title fade-in fade-in-up">Newest Recipes</h3>
         <ul class="recipe_list">
@@ -174,16 +190,21 @@
     </section>
 </main>
 <footer>
+    <!------------------------
+        footer
+    -------------------------->
     <div class="footer_box">
         <h2 class="footer_title"><a href="">Foodies</a></h2>
         <div class="footer_link_box">
+            <!-- footer nav -->
             <nav>
                 <ul class="footer_nav_list">
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Recipes</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="about_us.html">About us</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <!-- footer sns -->
             <ul class="footer_sns">
                 <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
                 <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
@@ -193,8 +214,12 @@
             </ul>
         </div>
     </div>
+    <!-- copyright -->
     <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
+<!------------------------
+        javascript
+-------------------------->
 <script src="js/nav_menu.js"></script>
 </body>
 </html>
