--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/nav_menu.js"></script>
 </head>
 <body>
 <header class="header_index">
     <!------------------------
         Header
     -------------------------->
-    <div class="header_box">
+    <div class="header_box" id="header-fix-color">
         <h1 class="header_title"><a href="./">Foodies</a></h1>
         <!-- pc header menu -->
         <nav class="pc_header">
@@ -217,9 +218,5 @@
     <!-- copyright -->
     <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
-<!------------------------
-        javascript
--------------------------->
-<script src="js/nav_menu.js"></script>
 </body>
 </html>
