:construction:  add sticky header

--- a/about_us.html
+++ b/about_us.html
@@ -27,9 +27,9 @@
         Header
     -------------------------->
     <div class="header_box">
-        <h1 class="header_title"><a href="./">Foodies</a></h1>
+        <h1 class="header_title" id="title-color"><a href="./">Foodies</a></h1>
         <!-- pc header menu -->
-        <nav class="pc_header">
+        <nav class="pc_header" id="menu-color">
             <ul class="header_menu">
                 <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
                 <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
@@ -43,6 +43,7 @@
                 <span class="hamburger__line hamburger__line--1"></span>
                 <span class="hamburger__line hamburger__line--2"></span>
                 <span class="hamburger__line hamburger__line--3"></span>
+                <p class="hamburger__menu" id="menu_text">MENU</p>
             </div>
             <nav class="sp-nav">
                 <!-- sp menu -->
