:memo: changed text

--- a/recipes.html
+++ b/recipes.html
@@ -165,7 +165,7 @@
         </ul>
     </section>
     <section class="contents_box">
-        <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+        <h3 class="contents_title recipes_contents_title">Tasty Desserts Of All Time</h3>
         <ul class="recipe_list">
             <li>
                 <a href="recipe_detail.html">
@@ -227,7 +227,7 @@
         </ul>
     </section>
     <section class="contents_box">
-        <h3 class="contents_title recipes_contents_title">Cozy Dishes for Winter</h3>
+        <h3 class="contents_title recipes_contents_title">Easy Peasy Meals</h3>
         <ul class="recipe_list">
             <li>
                 <a href="recipe_detail.html">
